--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -1,12 +1,13 @@
 @import "catppuccin-mocha.css";
 
 * {
+	border-radius: 0;
 	border: none;
+	color: inherit;
 	font-family: Noto Sans, Noto Sans Nerd Font;
 	font-size: 10px;
 	margin: 0;
 	padding: 0;
-	border-radius: 0;
 }
 
 #waybar, tooltip {
@@ -15,7 +16,7 @@
 }
 
 tooltip {
-	border: 2px solid @red;
+	border: 2px solid @sky;
 }
 
 button, label {
